--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="27theveningjune2024paper.js"></script>
     <script src="29thjunemorning2025paper.js"></script>
     <script src="26thjuneeveningshift2025paper.js"></script>
+    <script src="25thjunemorningshift2025paper.js"></script>
 
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 20px; background-color: #f4f4f9; color: #333; }
