--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="29thjunemorning2025paper.js"></script>
     <script src="26thjuneeveningshift2025paper.js"></script>
     <script src="25thjunemorningshift2025paper.js"></script>
+    <script src="25juneeveningshift2025paper.js"></script>
+    <script src="23august2024morningshiftpaper.js"></script>
+    <script src="26june2025computersciencepaper.js"></script>
 
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 20px; background-color: #f4f4f9; color: #333; }
